openvino_bindings/src/bindings.h

typedef void* CImageInference;
typedef void* CGraphRunner;
typedef void* CSpeechToText;
typedef void* CLLMInference;
typedef void* CTTIInference;
typedef void* CSentenceTransformer;
typedef void* CVLMInference;
typedef struct {
    const char* id;
    const char* name;
} Device;
typedef struct {
    int width;
    int height;
} CameraResolution;
typedef struct {
    int id;
    const char* name;
    CameraResolution* resolutions;
    int size;
} CameraDevice;
typedef struct {
  float start_ts;
  float end_ts;
  const char* text;
} TranscriptionChunk;
typedef struct {
    enum StatusEnum status;
    const char* message;
} Status;
typedef struct {
    enum StatusEnum status;
    const char* message;
    const char* value;
} StatusOrString;
typedef struct {
    enum StatusEnum status;
    const char* message;
    bool value;
} StatusOrBool;
typedef struct {
    enum StatusEnum status;
    const char* message;
    int value;
} StatusOrInt;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CGraphRunner value;
} StatusOrGraphRunner;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CSentenceTransformer value;
} StatusOrSentenceTransformer;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CSpeechToText value;
} StatusOrSpeechToText;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CLLMInference value;
} StatusOrLLMInference;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CLLMInference value;
} StatusOrTTIInference;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CLLMInference value;
} StatusOrVLMInference;
typedef struct {
    enum StatusEnum status;
    const char* message;
    Metrics metrics;
    const char* value;
} StatusOrModelResponse;
typedef struct {
    enum StatusEnum status;
    const char* message;
    Metrics metrics;
    TranscriptionChunk* value;
    int size;
    const char* text;
} StatusOrWhisperModelResponse;
typedef struct {
    enum StatusEnum status;
    const char* message;
    TTIMetrics metrics;
    const char* value;
    int step;
    int num_step;
} StatusOrTTIModelResponse;
typedef struct {
    enum StatusEnum status;
    const char* message;
    Device* value;
    int size;
} StatusOrDevices;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CameraDevice* value;
    int size;
} StatusOrCameraDevices;
EXPORT StatusOrSpeechToText* speechToTextOpen(const char* model_path, const char* device);
EXPORT Status* speechToTextLoadVideo(CSpeechToText instance, const char* video_path);
EXPORT StatusOrInt* speechToTextVideoDuration(CSpeechToText instance);
EXPORT StatusOrWhisperModelResponse* speechToTextTranscribe(CSpeechToText instance, int start, int duration, const char* language);
EXPORT Status* ModelAPISerializeModel(const char* model_path, const char* output_path);
EXPORT StatusOrDevices* getAvailableDevices();
EXPORT StatusOrCameraDevices* getAvailableCameraDevices();
Status* handle_exceptions();