lib/interop/generated_bindings.dart


  late final _speechToTextOpenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<StatusOrSpeechToText> Function(ffi.Pointer<pkg_ffi.Utf8>,
              ffi.Pointer<pkg_ffi.Utf8>)>>('speechToTextOpen');
  late final _speechToTextOpen = _speechToTextOpenPtr.asFunction<
      ffi.Pointer<StatusOrSpeechToText> Function(
          ffi.Pointer<pkg_ffi.Utf8>, ffi.Pointer<pkg_ffi.Utf8>)>();

  ffi.Pointer<Status> speechToTextLoadVideo(
    CSpeechToText instance,
    ffi.Pointer<pkg_ffi.Utf8> video_path,
  ) {
    return _speechToTextLoadVideo(
      instance,
      video_path,
    );
  }

  late final _speechToTextLoadVideoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Status> Function(CSpeechToText,
              ffi.Pointer<pkg_ffi.Utf8>)>>('speechToTextLoadVideo');
  late final _speechToTextLoadVideo = _speechToTextLoadVideoPtr.asFunction<
      ffi.Pointer<Status> Function(CSpeechToText, ffi.Pointer<pkg_ffi.Utf8>)>();

  ffi.Pointer<StatusOrInt> speechToTextVideoDuration(
    CSpeechToText instance,
  ) {
    return _speechToTextVideoDuration(
      instance,
    );
  }

  late final _speechToTextVideoDurationPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<StatusOrInt> Function(CSpeechToText)>>(
      'speechToTextVideoDuration');
  late final _speechToTextVideoDuration = _speechToTextVideoDurationPtr
      .asFunction<ffi.Pointer<StatusOrInt> Function(CSpeechToText)>();

  ffi.Pointer<StatusOrWhisperModelResponse> speechToTextTranscribe(
    CSpeechToText instance,
    int start,
    int duration,
    ffi.Pointer<pkg_ffi.Utf8> language,
  ) {
    return _speechToTextTranscribe(
      instance,
      start,
      duration,
      language,
    );
  }

  late final _speechToTextTranscribePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<StatusOrWhisperModelResponse> Function(
              CSpeechToText,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<pkg_ffi.Utf8>)>>('speechToTextTranscribe');
  late final _speechToTextTranscribe = _speechToTextTranscribePtr.asFunction<
      ffi.Pointer<StatusOrWhisperModelResponse> Function(
          CSpeechToText, int, int, ffi.Pointer<pkg_ffi.Utf8>)>();

  ffi.Pointer<Status> ModelAPISerializeModel(
    ffi.Pointer<pkg_ffi.Utf8> model_path,
    ffi.Pointer<pkg_ffi.Utf8> output_path,
  ) {
    return _ModelAPISerializeModel(
      model_path,
      output_path,
    );
  }

  late final _ModelAPISerializeModelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Status> Function(ffi.Pointer<pkg_ffi.Utf8>,
              ffi.Pointer<pkg_ffi.Utf8>)>>('ModelAPISerializeModel');
  late final _ModelAPISerializeModel = _ModelAPISerializeModelPtr.asFunction<
      ffi.Pointer<Status> Function(
          ffi.Pointer<pkg_ffi.Utf8>, ffi.Pointer<pkg_ffi.Utf8>)>();

  ffi.Pointer<StatusOrDevices> getAvailableDevices() {
    return _getAvailableDevices();
  }

  late final _getAvailableDevicesPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<StatusOrDevices> Function()>>(
          'getAvailableDevices');
  late final _getAvailableDevices = _getAvailableDevicesPtr
      .asFunction<ffi.Pointer<StatusOrDevices> Function()>();

  ffi.Pointer<StatusOrCameraDevices> getAvailableCameraDevices() {
    return _getAvailableCameraDevices();
  }

  late final _getAvailableCameraDevicesPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<StatusOrCameraDevices> Function()>>(
      'getAvailableCameraDevices');
  late final _getAvailableCameraDevices = _getAvailableCameraDevicesPtr
      .asFunction<ffi.Pointer<StatusOrCameraDevices> Function()>();

  ffi.Pointer<Status> handle_exceptions() {
    return _handle_exceptions();
  }

  late final _handle_exceptionsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Status> Function()>>(
          'handle_exceptions');
  late final _handle_exceptions =
      _handle_exceptionsPtr.asFunction<ffi.Pointer<Status> Function()>();
}

typedef va_list = ffi.Pointer<pkg_ffi.Utf8>;
typedef ptrdiff_t = ffi.LongLong;
typedef Dartptrdiff_t = int;
typedef errno_t = ffi.Int;
typedef Darterrno_t = int;
typedef wint_t = ffi.UnsignedShort;
typedef Dartwint_t = int;
typedef wctype_t = ffi.UnsignedShort;
typedef Dartwctype_t = int;
typedef __time32_t = ffi.Long;
typedef Dart__time32_t = int;
typedef __time64_t = ffi.LongLong;
typedef Dart__time64_t = int;

final class __crt_locale_data extends ffi.Opaque {}

final class __crt_multibyte_data extends ffi.Opaque {}

final class __crt_locale_pointers extends ffi.Struct {
  external ffi.Pointer<__crt_locale_data> locinfo;

  external ffi.Pointer<__crt_multibyte_data> mbcinfo;
}

typedef _locale_t = ffi.Pointer<__crt_locale_pointers>;

final class _Mbstatet extends ffi.Struct {
  @ffi.UnsignedLong()
  external int _Wchar;

  @ffi.UnsignedShort()
  external int _Byte;

  @ffi.UnsignedShort()
  external int _State;
}

typedef mbstate_t = _Mbstatet;
typedef time_t = __time64_t;
typedef rsize_t = ffi.Size;
typedef Dartrsize_t = int;

enum StatusEnum {
  OkStatus(0),
  ErrorStatus(-1),
  OpenVINOError(-2),
  ModelTypeNotSupplied(-10),
  ModelTypeNotSupported(-11),
  TaskTypeNotSupported(-12),
  OverlayUnableToLoadFont(-20),
  OverlayLabelNotFound(-21),
  OverlayNoOutputSelected(-22),
  FontLoadError(-30),
  InferenceAnomalyLabelsIncorrect(-40),
  CameraNotOpenend(-50),
  MediapipeNextPackageFailure(-61),
  MediapipeGraphError(-62),
  LLMNoMetricsYet(-71),
  SpeechToTextError(-80),
  SpeechToTextFileNotOpened(-81),
  SpeechToTextChunkHasNoData(-82),
  SpeechToTextChunkOutOfBounds(-83),
  InputDeviceError(-90);

  final int value;
  const StatusEnum(this.value);

  static StatusEnum fromValue(int value) => switch (value) {
        0 => OkStatus,
        -1 => ErrorStatus,
        -2 => OpenVINOError,
        -10 => ModelTypeNotSupplied,
        -11 => ModelTypeNotSupported,
        -12 => TaskTypeNotSupported,
        -20 => OverlayUnableToLoadFont,
        -21 => OverlayLabelNotFound,
        -22 => OverlayNoOutputSelected,
        -30 => FontLoadError,
        -40 => InferenceAnomalyLabelsIncorrect,
        -50 => CameraNotOpenend,
        -61 => MediapipeNextPackageFailure,
        -62 => MediapipeGraphError,
        -71 => LLMNoMetricsYet,
        -80 => SpeechToTextError,
        -81 => SpeechToTextFileNotOpened,
        -82 => SpeechToTextChunkHasNoData,
        -83 => SpeechToTextChunkOutOfBounds,
        -90 => InputDeviceError,
        _ => throw ArgumentError("Unknown value for StatusEnum: $value"),
      };
}

final class Metrics extends ffi.Struct {
  @ffi.Float()
  external double load_time;

  @ffi.Float()
  external double generate_time;

  @ffi.Float()
  external double tokenization_time;

  @ffi.Float()
  external double detokenization_time;

  @ffi.Float()
  external double ttft;

  @ffi.Float()
  external double tpot;

  @ffi.Float()
  external double throughput;

  @ffi.Int()
  external int number_of_generated_tokens;

  @ffi.Int()
  external int number_of_input_tokens;
}

final class TTIMetrics extends ffi.Struct {
  @ffi.Float()
  external double load_time;

  @ffi.Float()
  external double generate_time;
}

final class StringWithMetrics extends ffi.Struct {
  external ffi.Pointer<pkg_ffi.Utf8> string;

  external TTIMetrics metrics;
}

final class VLMMetrics extends ffi.Struct {
  @ffi.Float()
  external double load_time;

  @ffi.Float()
  external double generate_time;

  @ffi.Float()
  external double tokenization_time;

  @ffi.Float()
  external double detokenization_time;

  @ffi.Float()
  external double ttft;

  @ffi.Float()
  external double tpot;

  @ffi.Float()
  external double throughput;

  @ffi.Int()
  external int number_of_generated_tokens;

  @ffi.Int()
  external int number_of_input_tokens;
}

final class VLMStringWithMetrics extends ffi.Struct {
  external ffi.Pointer<pkg_ffi.Utf8> string;

  external VLMMetrics metrics;
}

typedef CImageInference = ffi.Pointer<ffi.Void>;
typedef CGraphRunner = ffi.Pointer<ffi.Void>;
typedef CSpeechToText = ffi.Pointer<ffi.Void>;
typedef CLLMInference = ffi.Pointer<ffi.Void>;
typedef CTTIInference = ffi.Pointer<ffi.Void>;
typedef CSentenceTransformer = ffi.Pointer<ffi.Void>;
typedef CVLMInference = ffi.Pointer<ffi.Void>;

final class Device extends ffi.Struct {
  external ffi.Pointer<pkg_ffi.Utf8> id;

  external ffi.Pointer<pkg_ffi.Utf8> name;
}

final class CameraResolution extends ffi.Struct {
  @ffi.Int()
  external int width;

  @ffi.Int()
  external int height;
}

final class CameraDevice extends ffi.Struct {
  @ffi.Int()
  external int id;

  external ffi.Pointer<pkg_ffi.Utf8> name;

  external ffi.Pointer<CameraResolution> resolutions;

  @ffi.Int()
  external int size;
}

final class TranscriptionChunk extends ffi.Struct {
  @ffi.Float()
  external double start_ts;

  @ffi.Float()
  external double end_ts;

  external ffi.Pointer<pkg_ffi.Utf8> text;
}

final class Status extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;
}

final class StatusOrString extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external ffi.Pointer<pkg_ffi.Utf8> value;
}

final class StatusOrBool extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  @ffi.Bool()
  external bool value;
}

final class StatusOrInt extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  @ffi.Int()
  external int value;
}

final class StatusOrGraphRunner extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external CGraphRunner value;
}

final class StatusOrSentenceTransformer extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external CSentenceTransformer value;
}

final class StatusOrSpeechToText extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external CSpeechToText value;
}

final class StatusOrLLMInference extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external CLLMInference value;
}

final class StatusOrTTIInference extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external CLLMInference value;
}

final class StatusOrVLMInference extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external CLLMInference value;
}

final class StatusOrModelResponse extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external Metrics metrics;

  external ffi.Pointer<pkg_ffi.Utf8> value;
}

final class StatusOrWhisperModelResponse extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external Metrics metrics;

  external ffi.Pointer<TranscriptionChunk> value;

  @ffi.Int()
  external int size;

  external ffi.Pointer<pkg_ffi.Utf8> text;
}

final class StatusOrTTIModelResponse extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;
